--- a/src/Wodsoft.ComBoost.Aggregation/Wodsoft.ComBoost.Aggregation.csproj
+++ b/src/Wodsoft.ComBoost.Aggregation/Wodsoft.ComBoost.Aggregation.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>ComBoost聚合服务。</Description>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>$(BaseTargetFrameworks)</TargetFrameworks>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
