--- a/src/Wodsoft.ComBoost.Aggregation.Mvc/Wodsoft.ComBoost.Aggregation.Mvc.csproj
+++ b/src/Wodsoft.ComBoost.Aggregation.Mvc/Wodsoft.ComBoost.Aggregation.Mvc.csproj
@@ -1,32 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Description>ComBoost聚合服务Mvc支持。</Description>
-    <TargetFrameworks>netcoreapp2.1;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
-    <LangVersion>10.0</LangVersion>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-  <Import Project="../../common.props" />
+	<PropertyGroup>
+		<Description>ComBoost聚合服务Mvc支持。</Description>
+		<TargetFrameworks>$(AspnetTargetFrameworks)</TargetFrameworks>
+		<LangVersion>10.0</LangVersion>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+	<Import Project="../../common.props" />
 
-  <ItemGroup Condition="'$(TargetFramework)'== 'netcoreapp2.1'">
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.1.0" />
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)'== 'netcoreapp2.1'">
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Formatters.Json" Version="2.1.0" />
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'== 'netcoreapp3.1'">
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)'!= 'netcoreapp2.1'">
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'== 'net5.0'">
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Wodsoft.ComBoost.Aggregation\Wodsoft.ComBoost.Aggregation.csproj" />
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'== 'net6.0'">
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Wodsoft.ComBoost.Aggregation\Wodsoft.ComBoost.Aggregation.csproj" />
-  </ItemGroup>
-  
 </Project>
