--- a/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
+++ b/src/Wodsoft.ComBoost.Core/Wodsoft.ComBoost.Core.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <Description>ComBoost框架核心。</Description>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>$(BaseTargetFrameworks)</TargetFrameworks>
     <RootNamespace>Wodsoft.ComBoost</RootNamespace>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
