--- a/src/Wodsoft.ComBoost.Distributed/Wodsoft.ComBoost.Distributed.csproj
+++ b/src/Wodsoft.ComBoost.Distributed/Wodsoft.ComBoost.Distributed.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>ComBoost分布式基础。</Description>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>$(BaseTargetFrameworks)</TargetFrameworks>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
     <RootNamespace>Wodsoft.ComBoost</RootNamespace>
