--- a/src/Wodsoft.ComBoost.Grpc/Wodsoft.ComBoost.Grpc.csproj
+++ b/src/Wodsoft.ComBoost.Grpc/Wodsoft.ComBoost.Grpc.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <Description>ComBoost Grpc基础。</Description>
-    <TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>$(BaseTargetFrameworks)</TargetFrameworks>
     <LangVersion>10.0</LangVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
