--- a/src/Wodsoft.ComBoost.EntityFrameworkCore/Wodsoft.ComBoost.EntityFrameworkCore.csproj
+++ b/src/Wodsoft.ComBoost.EntityFrameworkCore/Wodsoft.ComBoost.EntityFrameworkCore.csproj
@@ -1,24 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <Description>ComBoost用于EntityFrameworkCore实现的实体模块。</Description>
-    <TargetFrameworks>netstandard2.1;net6.0</TargetFrameworks>
-    <RootNamespace>Wodsoft.ComBoost.Data.Entity</RootNamespace>
-    <LangVersion>10.0</LangVersion>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-  <Import Project="../../common.props" />
+	<PropertyGroup>
+		<Description>ComBoost用于EntityFrameworkCore实现的实体模块。</Description>
+		<TargetFrameworks>netstandard2.1;net6.0;net9.0</TargetFrameworks>
+		<RootNamespace>Wodsoft.ComBoost.Data.Entity</RootNamespace>
+		<LangVersion>10.0</LangVersion>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+	<Import Project="../../common.props" />
 
-  <ItemGroup>
-    <ProjectReference Include="..\Wodsoft.ComBoost.Data.Core\Wodsoft.ComBoost.Data.Core.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Wodsoft.ComBoost.Data.Core\Wodsoft.ComBoost.Data.Core.csproj" />
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'== 'netstandard2.1'">
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)'== 'netstandard2.1'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
+	</ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)'== 'net6.0'">
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)'== 'net6.0'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.0.0" />
+	</ItemGroup>
+
+	<ItemGroup Condition="'$(TargetFramework)'== 'net9.0'">
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.0" />
+	</ItemGroup>
 
 </Project>
